--- a/index.html
+++ b/index.html
@@ -182,12 +182,12 @@
             <ul>
                 <li>
                     <span>湖南电子科技职业学院 - 软件工程专业（大专）- （自考）</span><br>
-                    <span><time>2017.03.07-2019.06.30</time></span><br>
+                    <span>时间：<time>2017.03.07-2019.06.30</time></span><br>
                     <span>证书编号：<mark>141225201906001202</mark></span><br>
                 </li>
                 <li>
                     <span>湖南工商大学 - 人力资源管理专业（本科）- （自考）</span><br>
-                    <span><time>xxxx.xx.xx-2019.12.30</time></span><br>
+                    <span>时间：<time>xxxx.xx.xx-2019.12.30</time></span><br>
                     <span>证书编号：<mark>65439117162003928</mark></span><br>
                 </li>
             </ul>
@@ -201,27 +201,27 @@
             <ul>
                 <li>
                     <span>[经历1]上海优创融联计算机科技有限公司－java开发工程师（初级）</span><br>
-                    <span><time>2017.12 至 2018.03</time></span><br>
+                    <span>时间：<time>2017.12 至 2018.03</time></span><br>
                     <span>离职原因：个人专业技能不强，转正后半个月主动离职去学习</span><br>
                 </li>
                 <li>
                     <span>[经历2]深圳市灵犀谷科技有限公司－java开发工程师（初级）</span><br>
-                    <span><time>2019.03-2019.06</time></span><br>
+                    <span>时间：<time>2019.03-2019.06</time></span><br>
                     <span>离职原因：薪资压榨，福利待遇未落实，假大空</span><br>
                 </li>
                 <li>
                     <span>[经历3]上海富总信息科技有限公司－java开发工程师（中级）</span><br>
-                    <span><time>2019.09-2019.12</time></span><br>
+                    <span>时间：<time>2019.09-2019.12</time></span><br>
                     <span>离职原因：老板资金链断了，项目组解散</span><br>
                 </li>
                 <li>
                     <span>[经历4]上海梦创双杨数据科技股份有限公司－java开发工程师（中级）</span><br>
-                    <span><time>2020.02-2021.04</time></span><br>
+                    <span>时间：<time>2020.02-2021.04</time></span><br>
                     <span>离职原因：连续通宵次数太多，太伤身体，无效加班次数太多</span><br>
                 </li>
                 <li>
                     <span>[经历5]上海塔莫信息科技有限公司－java开发工程师（高级）</span><br>
-                    <span><time>2021.04-至今</time></span><br>
+                    <span>时间：<time>2021.04-至今</time></span><br>
                     <span>离职原因：还未离职</span><br>
                 </li>
             </ul>
@@ -234,22 +234,16 @@
             <hr/>
             <ul>
                 <li>
-                    <h3>
-                        <span>[经历1]线下培训 - 北大青鸟 -（一年半）</span>
-                        <time>2016.07 至 2017.12</time>
-                    </h3>
+                    <span>[经历1]线下培训 - 北大青鸟 -（一年半）</span><br>
+                    <span>时间：<time>2016.07 至 2017.12</time></span><br>
                 </li>
                 <li>
-                    <h3>
-                        <span>[经历2]线下培训 - 尚硅谷 - （半年）</span>
-                        <time>2018.06 至 2019.03</time>
-                    </h3>
+                    <span>[经历2]线下培训 - 尚硅谷 - （半年）</span><br>
+                    <span>时间：<time>2018.06 至 2019.03</time></span><br>
                 </li>
                 <li>
-                    <h3>
-                        <span>[经历3]线上培训 - 图灵教育 - （持续）</span>
-                        <time>2021.01 至 至今</time>
-                    </h3>
+                    <span>[经历3]线上培训 - 图灵教育 - （持续）</span><br>
+                    <span>时间：<time>2021.01 至 至今</time></span><br>
                 </li>
             </ul>
         </section>
