--- a/index.html
+++ b/index.html
@@ -181,12 +181,18 @@
             <hr/>
             <ul>
                 <li>
-                    <span>湖南电子科技职业学院 - 软件工程专业（大专）- （自考）</span><br>
+                    <span>学校：湖南电子科技职业学院</span><br>
+                    <span>专业：软件工程专业</span><br>
+                    <span>学历：（大专）</span><br>
+                    <span>方式：（自考）</span><br>
                     <span>时间：<time>2017.03.07-2019.06.30</time></span><br>
                     <span>证书编号：<mark>141225201906001202</mark></span><br>
                 </li>
                 <li>
-                    <span>湖南工商大学 - 人力资源管理专业（本科）- （自考）</span><br>
+                    <span>学校：湖南工商大学</span><br>
+                    <span>专业：人力资源管理专业</span><br>
+                    <span>学历：（本科）</span><br>
+                    <span>方式：（自考）</span><br>
                     <span>时间：<time>xxxx.xx.xx-2019.12.30</time></span><br>
                     <span>证书编号：<mark>65439117162003928</mark></span><br>
                 </li>
