--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- 个人肖像 -->
         <section class="me">
             <!-- 头像照片 -->
-            <img class="avatar" src="https://g8-group.s3.eu-central-1.amazonaws.com/12.jpg">
+            <img class="avatar" width="288px" height="288px" src="https://g8-group.s3.eu-central-1.amazonaws.com/12.jpg">
             <h1 class="name">廖志伟</h1>
             <h4 class="info-job">Java开发工程师 / 上海</h4>
 
@@ -190,7 +190,7 @@
                     <span>专业：人力资源管理专业</span><br>
                     <span>学历：（本科）</span><br>
                     <span>方式：（自考）</span><br>
-                    <span>时间：<time>xxxx.xx.xx-2019.12.30</time></span><br>
+                    <span>时间：<time>2018.06.24-2019.12.30</time></span><br>
                     <span>证书编号：<mark>65439117162003928</mark></span><br>
                 </li>
             </ul>
