--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </li>
                 <li>
                     <label><b>QQ</b></label>
-                    <a href="" target="_blank">2469278741</a>
+                    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes">2469278741<img border="0" src="http://wpa.qq.com/pa?p=2::52" alt="请加我好友让我们愉快的聊天吧" title="请加我好友让我们愉快的聊天吧"/></a>
                 </li>
                 <li>
                     <label><b>手机</b></label>
@@ -114,7 +114,7 @@
                 </li>
                 <li>
                     <label><b>邮箱</b></label>
-                    <a href="mailto:2469278741@qq.com" target="_blank">2469278741@qq.com</a>
+                    <a href="mailto:java_wxid@aliyun.com" target="_blank">java_wxid@aliyun.com</a>
                 </li>
                 <li>
                     <label><b>哔哩哔哩</b></label>
