--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </li>
                 <li>
                     <label><b>QQ</b></label>
-                    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes">2469278741<img border="0" src="http://wpa.qq.com/pa?p=2::52" alt="请加我好友让我们愉快的聊天吧" title="请加我好友让我们愉快的聊天吧"/></a>
+                    <a target="_blank" href="http://wpa.qq.com/msgrd?v=3&uin=&site=qq&menu=yes">2469278741</a>
                 </li>
                 <li>
                     <label><b>手机</b></label>
