--- a/index.html
+++ b/index.html
@@ -296,6 +296,17 @@
             <p>喜欢的游戏：王者荣耀，QQ飞车，穿越火线</p>
             <p>喜欢的球类运动：乒乓球，篮球，羽毛球</p>
         </section>
+
+        <!-- 技能学习 -->
+        <section class="work info-unit">
+            <h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>技能学习</h2>
+            <hr/>
+            <img src="https://g8-group.s3.eu-central-1.amazonaws.com/%E5%A4%A7%E7%BA%B201.png"><br>
+            <img src="https://g8-group.s3.eu-central-1.amazonaws.com/%E5%A4%A7%E7%BA%B202.png"><br>
+            <img src="https://g8-group.s3.eu-central-1.amazonaws.com/%E5%A4%A7%E7%BA%B203.png"><br>
+            <img src="https://g8-group.s3.eu-central-1.amazonaws.com/%E5%A4%A7%E7%BA%B204.png"><br>
+        </section>
     </section>
 </article>
 
