--- a/index.html
+++ b/index.html
@@ -302,10 +302,10 @@
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>技能学习</h2>
             <hr/>
-            <img src="https://g8-group.s3.eu-central-1.amazonaws.com/%E5%A4%A7%E7%BA%B201.png"><br>
-            <img src="https://g8-group.s3.eu-central-1.amazonaws.com/%E5%A4%A7%E7%BA%B202.png"><br>
-            <img src="https://g8-group.s3.eu-central-1.amazonaws.com/%E5%A4%A7%E7%BA%B203.png"><br>
-            <img src="https://g8-group.s3.eu-central-1.amazonaws.com/%E5%A4%A7%E7%BA%B204.png"><br>
+            <img style="display: inline-block; width: 100%; max-width: 100%; height: auto;"  src="https://g8-group.s3.eu-central-1.amazonaws.com/%E5%A4%A7%E7%BA%B201.png"><br>
+            <img style="display: inline-block; width: 100%; max-width: 100%; height: auto;"  src="https://g8-group.s3.eu-central-1.amazonaws.com/%E5%A4%A7%E7%BA%B202.png"><br>
+            <img style="display: inline-block; width: 100%; max-width: 100%; height: auto;"  src="https://g8-group.s3.eu-central-1.amazonaws.com/%E5%A4%A7%E7%BA%B203.png"><br>
+            <img style="display: inline-block; width: 100%; max-width: 100%; height: auto;"  src="https://g8-group.s3.eu-central-1.amazonaws.com/%E5%A4%A7%E7%BA%B204.png"><br>
         </section>
     </section>
 </article>
