--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <li>
                     <span>[经历2]深圳市灵犀谷科技有限公司－java开发工程师（初级）</span><br>
                     <span>时间：<time>2019.03-2019.06</time></span><br>
-                    <span>离职原因：薪资压榨，福利待遇未落实，假大空</span><br>
+                    <span>离职原因：薪资压榨，福利待遇未落实，假大空，频繁换架构</span><br>
                 </li>
                 <li>
                     <span>[经历3]上海富总信息科技有限公司－java开发工程师（中级）</span><br>
