--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         <section class="me">
             <!-- 头像照片 -->
             <img class="avatar" width="150px" height="150px" src="https://g8-group.s3.eu-central-1.amazonaws.com/12334.jpg">
-            <h1 class="name">廖志伟</h1>
-            <h4 class="info-job">Java开发工程师 / 上海</h4>
+<!--            <h1 class="name">廖志伟</h1>-->
+<!--            <h4 class="info-job">Java开发工程师 / 上海</h4>-->
 
         </section>
 
@@ -76,12 +76,20 @@
             <hr/>
             <ul>
                 <li>
-                    <label>个人信息</label>
-                    <span>廖志伟 / 男 / 1997年</span>
+                    <label>姓名</label>
+                    <span>廖志伟</span>
                 </li>
                 <li>
                     <label>身高</label>
                     <span>180cm</span>
+                </li>
+                <li>
+                    <label>性别</label>
+                    <span>男</span>
+                </li>
+                <li>
+                    <label>出生日期</label>
+                    <span>1997年4月19日</span>
                 </li>
                 <li>
                     <label>学历</label>
@@ -117,8 +125,12 @@
                     <a href="mailto:java_wxid@aliyun.com" target="_blank">java_wxid@aliyun.com</a>
                 </li>
                 <li>
+                    <label><b>码云</b></label>
+                    <a href="https://gitee.com/java_wxid" target="_blank">java_wxid</a>
+                </li>
+                <li>
                     <label><b>哔哩哔哩</b></label>
-                    <a href="https://space.bilibili.com/353586723" target="_blank">java_wxid</a>
+                    <a href="https://space.bilibili.com/353586723" target="_blank">java_wxid（自媒体新萌）</a>
                 </li>
                 <li>
                     <label><b>CSDN</b></label>
@@ -127,10 +139,6 @@
                 <li>
                     <label><b>马克java社区</b></label>
                     <a href="http://www.mark-to-win.com/TeacherV2.html?id=34" target="_blank">java小丑（教学老师）</a>
-                </li>
-                <li>
-                    <label><b>码云</b></label>
-                    <a href="https://gitee.com/java_wxid" target="_blank">java_wxid</a>
                 </li>
             </ul>
         </section>
@@ -185,7 +193,7 @@
                 <li>
                     <span>[经历2]深圳市灵犀谷科技有限公司－java开发工程师（初级）</span><br>
                     <span>时间：<time>2019.03-2019.06</time></span><br>
-                    <span>离职原因：薪资压榨，福利待遇未落实，假大空，频繁换架构</span><br>
+                    <span>离职原因：薪资压榨，福利待遇未落实，假大空</span><br>
                 </li>
                 <li>
                     <span>[经历3]上海富总信息科技有限公司－java开发工程师（中级）</span><br>
@@ -208,7 +216,7 @@
         <!-- 专业技能学习 -->
         <section class="work info-unit">
             <h2>
-                <i class="fa fa-shopping-bag" aria-hidden="true"></i>专业技能学习</h2>
+                <i class="fa fa-shopping-bag" aria-hidden="true"></i>专业培训</h2>
             <hr/>
             <ul>
                 <li>
@@ -279,9 +287,9 @@
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>未达成的目标</h2>
             <hr/>
-            <p>出版书籍</p>
-            <p>图灵学院视频看完</p>
-            <p>在一线城市拥有一套房产</p>
+            <p>独立出版专业书籍</p>
+            <p>图灵学院课程学位</p>
+            <p>一线城市购置房产</p>
             <p>实现个人财富自由</p>
         </section>
 
@@ -291,10 +299,10 @@
                 <i class="fa fa-pencil" aria-hidden="true"></i>兴趣爱好</h2>
             <hr/>
             <p>喜欢的电影：漫威系列，DC系列，速度与激情系列</p>
-            <p>喜欢的动漫：超神学院，秦时明月</p>
+            <p>喜欢的动漫：超神学院，秦时明月，画江湖</p>
             <p>喜欢的小说：斗罗大陆，三体，三寸人间</p>
             <p>喜欢的游戏：王者荣耀，QQ飞车，穿越火线</p>
-            <p>喜欢的球类运动：乒乓球，篮球，羽毛球</p>
+            <p>喜欢的运动：乒乓球，篮球，羽毛球</p>
         </section>
 
         <!-- 技能学习 -->
