--- a/index.html
+++ b/index.html
@@ -298,11 +298,12 @@
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>兴趣爱好</h2>
             <hr/>
-            <p>喜欢的电影：漫威系列，DC系列，速度与激情系列</p>
-            <p>喜欢的动漫：超神学院，秦时明月，画江湖</p>
-            <p>喜欢的小说：斗罗大陆，三体，三寸人间</p>
-            <p>喜欢的游戏：王者荣耀，QQ飞车，穿越火线</p>
             <p>喜欢的运动：乒乓球，篮球，羽毛球</p>
+            <p>喜欢的小说：斗罗大陆，三体，三寸人间</p>
+            <p>喜欢的动漫：超神学院，秦时明月，画江湖</p>
+            <p>喜欢的游戏：王者荣耀，QQ飞车，穿越火线</p>
+            <p>喜欢的歌手：林俊杰，周杰伦，Taylor Swift</p>
+            <p>喜欢的电影：漫威系列，DC系列，速度与激情系列</p>
         </section>
 
         <!-- 技能学习 -->
