--- a/index.html
+++ b/index.html
@@ -154,6 +154,18 @@
     </section>
 
     <section class="main">
+
+        <!--个人简介-->
+        <section class="work info-unit">
+            <h2>
+                <i class="fa fa-pencil" aria-hidden="true">个人简介</i></h2>
+            <hr/>
+            <ul>
+                <li><span>我是廖志伟，一名Java开发工程师，CSDN博客专家，多年一线研发经验，曾就职多家互联网公司，任Java开发工程师职位，参与多个千万级并发互联网产品研发，对大型分布式，高并发及微服务架构有非常深入研究。</span></li>
+            </ul>
+        </section>
+
+
         <!-- 教育经历 -->
         <section class="edu info-unit">
             <h2>
