--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <!--个人简介-->
         <section class="work info-unit">
             <h2>
-                <i class="fa fa-pencil" aria-hidden="true">个人简介</i></h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>个人简介</h2>
             <hr/>
             <ul>
                 <li><span>我是廖志伟，一名Java开发工程师，CSDN博客专家，多年一线研发经验，曾就职多家互联网公司，任Java开发工程师职位，参与多个千万级并发互联网产品研发，对大型分布式，高并发及微服务架构有非常深入研究。</span></li>
@@ -225,7 +225,7 @@
             </ul>
         </section>
 
-        <!-- 专业技能学习 -->
+        <!-- 专业培训 -->
         <section class="work info-unit">
             <h2>
                 <i class="fa fa-shopping-bag" aria-hidden="true"></i>专业培训</h2>
@@ -249,7 +249,7 @@
         <!--职业技能-->
         <section class="work info-unit">
             <h2>
-                <i class="fa fa-pencil" aria-hidden="true">职业技能</i></h2>
+                <i class="fa fa-pencil" aria-hidden="true"></i>职业技能</h2>
             <hr/>
             <ul>
                 <li><span>具备扎实的Java基础，熟练掌握javaIO流，集合，反射，泛型，注解，网络编程，多线程等基础开发技术。</span></li>
