--- a/index.html
+++ b/index.html
@@ -252,20 +252,15 @@
                 <i class="fa fa-pencil" aria-hidden="true"></i>职业技能</h2>
             <hr/>
             <ul>
-                <li><span>具备扎实的Java基础，熟练掌握javaIO流，集合，反射，泛型，注解，网络编程，多线程等基础开发技术。</span></li>
-                <li><span>深入理解JVM底层原理，JMM内存模型，垃圾回收机制，GC算法，熟悉JVM各种垃圾回收器的使用以及核心参数调优，有过一定JVM线上调优经验，对JVM调优有自己独到的见解。</span></li>
-                <li><span>深入理解Spring，Spring MVC，Mybatis等开源框架的设计原理以及底层架构，研究过部分核心源码，具备一定的框架定制开发能力。</span></li>
-                <li><span>深入理解Spring Boot，Spring Could，Dubbo等开源框架的设计原理以及底层架构，研究过部分核心源码，具备一定的框架定制开发能力。</span></li>
-                <li><span>深入理解MySQL（索引数据结构，B+ tree索引特点以及数据库事务的隔离级别，传播行为，数据库死锁，数据迁移，分库分表，读写分离，主从复制，灾难备份）等。</span></li>
-                <li><span>深入理解Redis（版本间的区别，redisObject属性，简单字符串，链表，字典，跳跃表，整数集合，压缩列表，回收机制，线程模型，分布式寻址算法，过期策略，数据一致性，多级缓存架构，热点数据缓存，并发竞争，哨兵模式，主从复制，集群模式等），具有集群架构及高可用相关经验，熟悉各种缓存高并发的使用场景，比如，热点缓存重构，缓存雪崩，缓存穿透，缓存失效。</span></li>
-                <li><span>熟悉常见消息中间件的使用，解决过各种消息通讯场景的疑难问题。比如，高可用，消息丢失，消息消费的幂等性，顺序性，消息延迟，过期失效，消息队列满了等问题。</span></li>
-                <li><span>熟悉设计模式，Leetcode算法以及常见的数据结构，熟悉HTTP协议，TCPIP协议，OAUTH2协议等。</span></li>
-                <li><span>对于各种高性能IO通信模型以及相关开源组件Netty等源码有过深度研究，理解NIO与Netty线程模型，深入Hotspot源码与Linux内核，熟悉百万级并发服务器架构的设计。</span></li>
-                <li><span>在项目中解决过各种分布式场景的技术难题，比如分布式锁，分布式事务，分布式Session，分布式任务，分库分表。</span></li>
+                <li><span>具备扎实的Java基础，熟练掌握集合，反射，Synchronized关键字，CountDownLatch&Semaphore应用与原理，Executor线程池原理与源码，深入理解同步器AQS阻塞队列BlockingQueue，Future&ForkJoin框架原理，无锁并发框架Disruptor等并发编程相关技术。熟悉设计模式，Leetcode算法以及常见的数据结构，熟悉HTTP协议，TCPIP协议，OAUTH2协议等。</span></li>
+                <li><span>深入理解操作系统与虚拟机底层，CPU缓存一致性协议MESI，深入理解JVM底层原理，JMM内存模型，垃圾回收机制，GC算法，熟悉JVM各种垃圾回收器的使用以及核心参数调优。深入理解Tomcat整体架构和处理请求流程，长连接的底层源码原理，底层分块传输和响应流程原理，NIO处理请求源码等性能优化相关技术。</span></li>
+                <li><span>深入理解Spring，Spring MVC，Mybatis，Spring Boot，Spring Could，Dubbo等开源框架的设计原理以及底层架构，研究过部分核心源码，如：Spring循环依赖源码，Spring启动过程源码，事务源码，Bean生命周期源码，Ioc容器加载过程源码，AOP源码，SpringMvc执行流程源码，MyBatis的数据过操作过程源码，SQL操作执行流程源码，配置文件解析源码，Spring Boot自动装配核心源码，Alibaba Nacos注册中心源码，Sentinel规则持久化实战及其源码，分布式事务组件Seata内核源码，Dubbo服务引入与导出以及调用源码等。具备一定的框架定制开发能力。</span></li>
+                <li><span>深入理解MySQL：SQL的执行流程，传播行为，锁与事务隔离级别，MVCC与BufferPool缓存机制，索引数据结构，B+ tree索引特点以及数据库事务的隔离级别，传播行为，数据库死锁，数据迁移，分库分表，读写分离，主从复制，灾难备份。深入理解ElasticSearch：核心语法，具备集群高可用实战经验，集群架构原理与搜索技术深入，底层原理与分组聚合查询，Java API整合ElasticSearch以及Logstash、FileBeat使用等。深入理解MongoDB：基本原理，聚合操作及索引底层原理，集群模式及应用实战。深入理解Zookeeper：特性与节点数据类型，典型使用场景，选举Leader源码，集群ZAB协议与Watcher监听机制源码等。</span></li>
+                <li><span>深入理解Redis：I/O 多路复用，各版本之间的区别，简单字符串，链表，字典，跳跃表，整数集合，压缩列表，回收机制，线程模型，分布式寻址算法，过期策略，数据一致性，多级缓存架构，热点数据缓存，并发竞争，哨兵模式，主从复制，集群模式等。具有集群架构及高可用相关经验，熟悉各种缓存高并发的使用场景，如：热点缓存重构，缓存雪崩， 缓存穿透，缓存失效。</span></li>
+                <li><span>熟悉RabbitMQ，RockerMQ，Kafka消息中间件的使用，解决过各种消息通讯场景的疑难问题。如：延迟队列，消息可靠投递，高可用，消息的幂等性，消息丢失，消息的顺序性，消息的延迟，消息过期失效，消息队列满了等问题。</span></li>
+                <li><span>在项目中解决过各种分布式场景的技术难题，比如分布式锁，分布式事务，分布式Session，分布式任务，ShardingSphere分库分表。深入理解各种高性能IO通信模型以及Netty底层数据交互源码，理解NIO与Netty线程模型有过深入研究，深入Hotspot源码与Linux内核，熟悉百万级并发服务器架构的设计。</span></li>
                 <li><span>具备0-1搭建微服务、高可用、高并发、分布式项目架构。具备环境搭建，自动化部署，产品需求讨论，任务分配，Code审查，负责指导、培训普通开发工程师，审核开发工程师的设计与研发质量等经验。具备项目管理、需求分析、文档编写、原型设计等基本的文档输出能力。</span></li>
-                <li><span>有着大量的第三方对接经验，比如：Alibaba，Wechat，Facebook，Google，Apple，infobip等。</span></li>
-                <li><span>具备生产环境服务器变慢诊断，线上排查，性能评估，Linux常用命令，Docker容器化，Jenkins自动化部署，k8s云原生，Skywalking分布式追踪系统，ElasticSearch全文搜索，Mongodb非关系性数据库，达梦国产化数据库，高性能图数据库Neo4j，spring security oauth2权限框架，swagger在线文档，gateway和Kong网关，i18n国际化，James邮件服务器，FastDFS分布式文件存储，Activiti工作流，页面模板引擎，Nginx负载均衡，Zookeeper分布式服务框架等后端相关技术。</span></li>
-                <li><span>热爱技术，工作认真、严谨，对系统质量有近乎苛刻的要求意识。责任心强、重视团队合作，具备良好的沟通协调及推动能力，能承担较大的压力。有很强的分析问题和解决问题的能力，有强烈的责任心。</span></li>
+                <li><span>具备生产环境服务器变慢诊断，线上排查，性能评估，Linux常用命令，Docker容器化，Docker本地镜像仓库，GitLab私服，Jenkins自动化部署，k8s云原生，Skywalking分布式追踪系统，达梦国产化数据库，高性能图数据库Neo4j，spring security oauth2权限框架，swagger在线文档，gateway和Kong网关，i18n国际化等后端相关技术。</span></li>
             </ul>
         </section>
 
