--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <i class="fa fa-pencil" aria-hidden="true"></i>个人简介</h2>
             <hr/>
             <ul>
-                <li><span>我是廖志伟，一名Java开发工程师，CSDN博客专家，多年一线研发经验，曾就职多家互联网公司，任Java开发工程师职位，参与多个千万级并发互联网产品研发，对大型分布式，高并发及微服务架构有非常深入研究。</span></li>
+                <li><span>我是廖志伟，一名Java开发工程师，CSDN博客专家，多年一线研发经验，曾就职多家互联网公司，参与并主导多个百万级并发的互联网产品研发与系统架构搭建，对大型分布式，高并发及微服务架构，缓存框架有非常深入的研究，对于中间件底层，系统调优颇多经验。</span></li>
             </ul>
         </section>
 
