--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>未达成的目标</h2>
             <hr/>
+            <p>图灵学院课程学完</p>
             <p>独立出版专业书籍</p>
-            <p>图灵学院课程学位</p>
             <p>一线城市购置房产</p>
             <p>实现个人财富自由</p>
         </section>
