--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <li><span>在项目中解决过各种分布式场景的技术难题，比如分布式锁，分布式事务，分布式Session，分布式任务，ShardingSphere分库分表。深入理解各种高性能IO通信模型以及Netty底层数据交互源码，理解NIO与Netty线程模型有过深入研究，深入Hotspot源码与Linux内核，熟悉百万级并发服务器架构的设计。</span></li>
                 <li><span>具备0-1搭建微服务、高可用、高并发、分布式项目架构。具备环境搭建，自动化部署，产品需求讨论，任务分配，Code审查，负责指导、培训普通开发工程师，审核开发工程师的设计与研发质量等经验。具备项目管理、需求分析、文档编写、原型设计等基本的文档输出能力。</span></li>
                 <li><span>具备生产环境服务器变慢诊断，线上排查，性能评估，Linux常用命令，Docker容器化，Docker本地镜像仓库，GitLab私服，Jenkins自动化部署，k8s云原生，Skywalking分布式追踪系统，达梦国产化数据库，高性能图数据库Neo4j，spring security oauth2权限框架，swagger在线文档，gateway和Kong网关，i18n国际化等后端相关技术。</span></li>
-                <li><span>K8S自动化运维平台Kubernetes以及Devops,kubectl核心，K8S Dashboard以及Pod原理及生命周期管理，K8S Replicaion controller，ReplicaSet，Deployment,ds,Job,Cronjob and Statefulset核心，K8S Service与负载均衡以及Ingress，K8S存储供应，使用NFS flex volume以及CSI接口，K8S Configmap，Secret，Metric server以及HPA，K8S部署Wordpress应用以及生产环境整体部署及全链路测试，k8s部署Shardingsphere，Mycat，Mysql主从与Redis，Rocketmq，Rabbitmq，Nacos以及PV/PVC/SC。</span></li>            
+                <li><span>熟悉掌握K8S自动化运维平台Kubernetes以及Devops，kubectl核心，深入理解K8S Dashboard以及Pod原理及生命周期管理，K8S Replicaion controller，ReplicaSet，Deployment，ds，Job，Cronjob and Statefulset核心，K8S Service与负载均衡以及Ingress，K8S存储供应，使用NFS flex volume以及CSI接口，K8S Configmap，Secret，Metric server以及HPA，K8S部署Wordpress应用以及生产环境整体部署及全链路测试，k8s部署Shardingsphere，Mycat，Mysql主从与Redis，Rocketmq，Rabbitmq，Nacos以及PV/PVC/SC。</span></li>            
             </ul>
         </section>
         <!-- 自我评价 -->
