--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!-- 个人肖像 -->
         <section class="me">
             <!-- 头像照片 -->
-            <img class="avatar" width="150px" height="150px" src="https://g8-group.s3.eu-central-1.amazonaws.com/12334.jpg">
+            <img class="avatar" width="150px" height="150px" src="https://qa-community-1306449944.cos.ap-guangzhou.myqcloud.com/5c05ee65-68ee-4513-a38d-75560d5a9383.png">
 <!--            <h1 class="name">廖志伟</h1>-->
 <!--            <h4 class="info-job">Java开发工程师 / 上海</h4>-->
 
@@ -108,7 +108,7 @@
                 <i class="fa fa-phone" aria-hidden="true"></i>联系方式</h2>
             <hr/>
             <ul>
-                <li>
+<!--                 <li>
                     <label><b>微信</b></label>
                     <a href="https://wx.qq.com/" target="_blank">java_wxid</a>
                 </li>
@@ -119,7 +119,7 @@
                 <li>
                     <label><b>手机</b></label>
                     <a href="tel:17717299170" target="_blank">17717299170</a>
-                </li>
+                </li> -->
                 <li>
                     <label><b>邮箱</b></label>
                     <a href="mailto:java_wxid@aliyun.com" target="_blank">java_wxid@aliyun.com</a>
@@ -145,9 +145,9 @@
 
 
         <section class="qrcode info-unit">
-            <h2><i class="fa fa-qrcode" aria-hidden="true"></i>二维码</h2>
+            <h2><i class="fa fa-qrcode" aria-hidden="true"></i>微信公众号二维码</h2>
             <hr/>
-            <img src="https://g8-group.s3.eu-central-1.amazonaws.com/23.jpg" style="width: 100%;" alt="">
+            <img src="https://img-blog.csdnimg.cn/e373a24a6b41451b98f55da7c7ccdc32.jpg" style="width: 100%;" alt="">
         </section>
 
 
