--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
 <aside>
     <ul>
         <li>
-            <a href="https://github.com/BoomManager/BoomManager.github.io" target="_blank">源代码</a>
+            <a href="https://java_wxid.gitee.io/liao-zhiwei" target="_blank">主页</a>
         </li>
     </ul>
 </aside>
