--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                 </li>
                 <li>
                     <label><b>CSDN</b></label>
-                    <a href="https://blog.csdn.net/java_wxid" target="_blank">java小丑（博客专家）</a>
+                    <a href="https://blog.csdn.net/java_wxid" target="_blank">java_wxid（博客专家）</a>
                 </li>
                 <li>
                     <label><b>马克java社区</b></label>
