--- a/index.html
+++ b/index.html
@@ -168,8 +168,12 @@
                 <i class="fa fa-pencil" aria-hidden="true"></i>已达成的目标</h2>
             <hr/>
             <p>CSDN付费专栏（已达成）</p>
-            <p>CSDN涨粉三千（已达成）</p>
+            <p>CSDN博客专家（已达成）</p>
+            <p>Java领域优质创作者（已达成）</p>
+            <p>CSDN涨粉一万（已达成）</p>
             <p>高级开发工程师（已达成）</p>
+            <p>创建个人社区（已达成）</p>
+            <p>搭建新媒体平台（已达成）</p>
         </section>
 
         <!-- 未达成的目标 -->
