--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <a href="https://www.9kd.com/view/20040172"><span>点击【凯迪网】</span></a><br />
             <a href="https://gitcode.net/java_wxid"><span>点击【Gitcode】</span></a><br />
             <a href="https://www.infoq.cn/u/liaozhiwei/publish"><span>点击【InfoQ】</span></a><br />
-	    <a href="https://blog.51cto.com/u_15241602"><span>点击【51CTO】</span></a><br />
+            <a href="https://blog.51cto.com/u_15241602"><span>点击【51CTO】</span></a><br />
             <a href="https://java_wxid.gitee.io/liao-zhiweis-blog"><span>点击【博客网站】</span></a><br />
             <a href="https://juejin.cn/user/3290187978253431"><span>点击【稀土掘金】</span></a><br />
             <a href="https://my.oschina.net/u/3969122"><span>点击【开源中国】</span></a><br />
@@ -173,6 +173,7 @@
             <a href="https://www.toutiao.com/c/user/token/MS4wLjABAAAArQYj7pLVDM3Pf0Zqp1m50Be1yIbgLat5cKIobMsaHH3WORMNY3v1FzRLPp3cIRtJ/"><span>点击【今日头条】</span></a><br />
             <a href="https://tieba.baidu.com/home/main?un=%E8%B8%8F%E7%A0%B4%E5%A4%A9%E5%A4%A9"><span>点击【百度贴吧】</span></a><br />
             <a href="https://space.bilibili.com/353586723"><span>点击【哔哩哔哩】</span></a><br />
+            <a href="http://www.mark-to-win.com/TeacherV2.html?id=34"><span>点击【马克Java社区】</span></a><br />
             <a href="https://img-blog.csdnimg.cn/e373a24a6b41451b98f55da7c7ccdc32.jpg"><span>点击【微信公众号】</span></a><br />
         </section>
 
@@ -187,7 +188,7 @@
                 <i class="fa fa-pencil" aria-hidden="true"></i>个人简介</h2>
             <hr/>
             <ul>
-                <li><span>我是廖志伟，一名Java资深开发工程师、Java领域优质创作者、CSDN博客专家、CSDN幕后大佬社区创始人、CSDN开源导航贡献者、51CTO专家博主、B站UP主。拥有多年一线研发经验，参与并主导过多个百万级并发的互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、 ElasticSearch全文搜索、 MongoDB非关系型数据库、分库分表ShardingSphere。 </span></li>
+                <li><span>我是廖志伟，一名Java资深开发工程师、Java领域优质创作者、CSDN博客专家、51CTO专家博主、马克Java社区讲师、幕后大佬社区创始人、开源导航贡献者、B站UP主。拥有多年一线研发经验，参与并主导过多个百万级并发的互联网产品研发和系统架构搭建，研究过主流框架的底层源码(Spring、SpringBoot、Spring MVC、SpringCould、Mybatis、Dubbo、Zookeeper)，消息中间件底层架构原理（RabbitMQ、RockerMQ、Kafka）、Redis缓存、MySQL关系型数据库、 ElasticSearch全文搜索、 MongoDB非关系型数据库、分库分表ShardingSphere。 </span></li>
             </ul>
         </section>
 
@@ -198,7 +199,24 @@
                 <i class="fa fa-pencil" aria-hidden="true"></i>职业技能</h2>
             <hr/>
             <ul>
-                <li><span>具备扎实的Java基础，熟练掌握集合，Synchronized，AQS，线程池，JVM底层原理，内存模型，内存屏障，class文件结构，类加载机制，双亲委派，垃圾回收机制以及垃圾回收器，三色标记，跨代引用，GC算法，空间分配担保策略，安全点，逃逸分析，内存泄漏与溢出，有过JVM线上调优经验。</span></li>
+                <li><span>具备扎实的Java基础，熟练掌握
+                    <a href="https://blog.csdn.net/java_wxid/article/details/124788118"><span>集合</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/124900072"><span>Synchronized</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/124900438"><span>AQS</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/124900478"><span>线程池</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/124900588"><span>JVM内存模型</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/125015030"><span>内存屏障</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/124900676"><span>class文件结构</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/124900515"><span>类加载机制</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/124900716"><span>双亲委派</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/124900842"><span>垃圾回收算法、垃圾回收器、空间分配担保策略</span></a>、
+                    <a href="https://liaozhiwei.blog.csdn.net/article/details/125010461"><span>安全点</span></a>、
+                    <a href="https://liaozhiwei.blog.csdn.net/article/details/124900951"><span>可达性分析、强软弱虚引用、gc的过程、三色标记、跨代引用</span></a>、
+                    <a href="https://liaozhiwei.blog.csdn.net/article/details/125010126"><span>逃逸分析</span></a>、
+                    <a href="https://liaozhiwei.blog.csdn.net/article/details/125010387"><span>内存泄漏与溢出</span></a>、
+                    有过<a href="https://liaozhiwei.blog.csdn.net/article/details/125010353"><span>JVM线上调优经验</span></a>。
+                    </span>
+                </li>
                 <li><span>深入理解MySQL：索引数据结构、最左前缀原则、聚集索引、辅助索引、覆盖索引、联合索引、FIC、离散读、ICP优化、全文检索、行级锁及其算法、意向锁、死锁、乐观锁、悲观锁、一致性非锁定读（MVCC原理）、主键自增长实现原理、事务隔离级别、重做日志刷盘策略、分布式事务、SQL的执行流程、主从复制、存储引擎、分库分表、读写分离、四大属性的底层实现原理、BufferPool缓存机制、有MySQL调优经验。</span></li>
                 <li><span>深入理解Redis：多路复用、简单字符串、链表、字典、跳跃表、整数集合、压缩列表、回收机制、线程模型、分布式寻址算法、过期策略、内存淘汰策略、各版本之间的区别、数据一致性、多级缓存架构、热点数据缓存、并发竞争、哨兵模式、主从复制、集群模式等。具有集群架构及高可用相关经验、熟悉各种缓存高并发的使用场景如：热点缓存重构、缓存雪崩、 缓存穿透、缓存失效。</span></li>
                 <li><span>熟悉掌握RabbitMQ、RockerMQ、Kafka消息中间件、解决过各种消息通讯场景的疑难问题。对于以上三种消息中间件出现的消息可靠投递、消息丢失、消息顺序性、消息延迟、过期失效、消息队列满了、消息高可用等问题都有着不错的实战解决方案。</span></li>
@@ -206,16 +224,16 @@
                 <li><span>深入理解ElasticSearch：核心语法、倒排索引、底层原理与分组聚合查询、具备集群高可用实战经验、集群架构原理与搜索技术深入、Java API整合ElasticSearch以及Logstash、FileBeat使用等。深入理解MongoDB：基本原理、聚合操作及索引底层原理、集群模式及应用实战。深入理解各种高性能IO通信模型以及Netty底层数据交互源码、理解NIO与Netty线程模型有过深入研究、深入Hotspot源码与Linux内核、熟悉百万级并发服务器架构的设计。</span></li>
                 <li><span>具备0-1搭建微服务、高可用、高并发、分布式项目架构、环境搭建、自动化部署、服务器环境线上排查、性能评估相关经验。具备Linux常用命令、Docker容器化、本地镜像仓库、GitLab私服、Jenkins自动化部署等技术。</span></li>
                 <li><span>拥有产品需求讨论、任务分配、Code审查、负责指导、培训普通开发工程师、审核开发工程师的设计与研发质量等经验。具备项目管理、需求分析、文档编写、原型设计等基本的文档输出能力。</span></li>
-<!--                <li><span>具备扎实的Java基础，熟练掌握集合，反射，Synchronized关键字，CountDownLatch&Semaphore应用与原理，Executor线程池原理与源码，深入理解同步器AQS阻塞队列BlockingQueue，Future&ForkJoin框架原理，无锁并发框架Disruptor等并发编程相关技术。熟悉常见的设计模式以及数据结构，Leetcode算法，熟悉HTTP协议，TCPIP协议，OAUTH2协议等。</span></li>-->
-<!--                <li><span>深入理解操作系统与虚拟机底层，CPU缓存一致性协议MESI，深入理解JVM底层原理，JMM内存模型，垃圾回收机制，GC算法，熟悉JVM各种垃圾回收器的使用以及核心参数调优。深入理解Tomcat整体架构和处理请求流程，长连接的底层源码原理，底层分块传输和响应流程原理，NIO处理请求源码等性能优化相关技术。</span></li>-->
-<!--                <li><span>深入理解Spring，Spring MVC，Mybatis，Spring Boot，Spring Could，Dubbo等开源框架的设计原理以及底层架构，研究过部分核心源码，如：Spring循环依赖源码，Spring启动过程源码，事务源码，Bean生命周期源码，Ioc容器加载过程源码，AOP源码，SpringMvc执行流程源码，MyBatis的数据过操作过程源码，SQL操作执行流程源码，配置文件解析源码，Spring Boot自动装配核心源码，Alibaba Nacos注册中心源码，Sentinel规则持久化实战及其源码，分布式事务组件Seata内核源码，Dubbo服务引入与导出以及调用源码等。具备一定的框架定制开发能力。</span></li>-->
-<!--                <li><span>深入理解MySQL：SQL的执行流程，传播行为，锁与事务隔离级别，MVCC与BufferPool缓存机制，索引数据结构，B+ tree索引特点以及数据库事务的隔离级别，传播行为，数据库死锁，数据迁移，分库分表，读写分离，主从复制，灾难备份。深入理解ElasticSearch：核心语法，具备集群高可用实战经验，集群架构原理与搜索技术深入，底层原理与分组聚合查询，Java API整合ElasticSearch以及Logstash、FileBeat使用等。深入理解MongoDB：基本原理，聚合操作及索引底层原理，集群模式及应用实战。深入理解Zookeeper：特性与节点数据类型，典型使用场景，选举Leader源码，集群ZAB协议与Watcher监听机制源码等。</span></li>-->
-<!--                <li><span>深入理解Redis：I/O 多路复用，各版本之间的区别，简单字符串，链表，字典，跳跃表，整数集合，压缩列表，回收机制，线程模型，分布式寻址算法，过期策略，数据一致性，多级缓存架构，热点数据缓存，并发竞争，哨兵模式，主从复制，集群模式等。具有集群架构及高可用相关经验，熟悉各种缓存高并发的使用场景，如：热点缓存重构，缓存雪崩， 缓存穿透，缓存失效。</span></li>-->
-<!--                <li><span>熟悉RabbitMQ，RockerMQ，Kafka消息中间件的使用，解决过各种消息通讯场景的疑难问题。如：延迟队列，消息可靠投递，消息队列的高可用，消息的幂等性，消息丢失，消息的顺序性，消息的延迟，消息过期失效，消息队列满了等问题。</span></li>-->
-<!--                <li><span>在项目中解决过各种分布式场景的技术难题，比如分布式锁，分布式事务，分布式Session，分布式任务，ShardingSphere分库分表。深入理解各种高性能IO通信模型以及Netty底层数据交互源码，理解NIO与Netty线程模型有过深入研究，深入Hotspot源码与Linux内核，熟悉百万级并发服务器架构的设计。</span></li>-->
-<!--                <li><span>具备0-1搭建微服务、高可用、高并发、分布式项目架构。具备环境搭建，自动化部署，产品需求讨论，任务分配，Code审查，负责指导、培训普通开发工程师，审核开发工程师的设计与研发质量等经验。具备项目管理、需求分析、文档编写、原型设计等基本的文档输出能力。</span></li>-->
-<!--                <li><span>具备生产环境服务器变慢诊断，线上排查，性能评估，Linux常用命令，Docker容器化，Docker本地镜像仓库，GitLab私服，Jenkins自动化部署，k8s云原生，Skywalking分布式追踪系统，达梦国产化数据库，高性能图数据库Neo4j，spring security oauth2权限框架，swagger在线文档，gateway和Kong网关，i18n国际化等后端相关技术。</span></li>-->
-<!--                <li><span>熟悉掌握K8S自动化运维平台Kubernetes以及Devops，kubectl核心，深入理解K8S Dashboard以及Pod原理及生命周期管理，K8S Replicaion controller，ReplicaSet，Deployment，ds，Job，Cronjob and Statefulset核心，K8S Service与负载均衡以及Ingress，K8S存储供应，使用NFS flex volume以及CSI接口，K8S Configmap，Secret，Metric server以及HPA，K8S部署Wordpress应用以及生产环境整体部署及全链路测试，k8s部署Shardingsphere，Mycat，Mysql主从与Redis，Rocketmq，Rabbitmq，Nacos以及PV/PVC/SC。</span></li>            -->
+                <!--                <li><span>具备扎实的Java基础，熟练掌握集合，反射，Synchronized关键字，CountDownLatch&Semaphore应用与原理，Executor线程池原理与源码，深入理解同步器AQS阻塞队列BlockingQueue，Future&ForkJoin框架原理，无锁并发框架Disruptor等并发编程相关技术。熟悉常见的设计模式以及数据结构，Leetcode算法，熟悉HTTP协议，TCPIP协议，OAUTH2协议等。</span></li>-->
+                <!--                <li><span>深入理解操作系统与虚拟机底层，CPU缓存一致性协议MESI，深入理解JVM底层原理，JMM内存模型，垃圾回收机制，GC算法，熟悉JVM各种垃圾回收器的使用以及核心参数调优。深入理解Tomcat整体架构和处理请求流程，长连接的底层源码原理，底层分块传输和响应流程原理，NIO处理请求源码等性能优化相关技术。</span></li>-->
+                <!--                <li><span>深入理解Spring，Spring MVC，Mybatis，Spring Boot，Spring Could，Dubbo等开源框架的设计原理以及底层架构，研究过部分核心源码，如：Spring循环依赖源码，Spring启动过程源码，事务源码，Bean生命周期源码，Ioc容器加载过程源码，AOP源码，SpringMvc执行流程源码，MyBatis的数据过操作过程源码，SQL操作执行流程源码，配置文件解析源码，Spring Boot自动装配核心源码，Alibaba Nacos注册中心源码，Sentinel规则持久化实战及其源码，分布式事务组件Seata内核源码，Dubbo服务引入与导出以及调用源码等。具备一定的框架定制开发能力。</span></li>-->
+                <!--                <li><span>深入理解MySQL：SQL的执行流程，传播行为，锁与事务隔离级别，MVCC与BufferPool缓存机制，索引数据结构，B+ tree索引特点以及数据库事务的隔离级别，传播行为，数据库死锁，数据迁移，分库分表，读写分离，主从复制，灾难备份。深入理解ElasticSearch：核心语法，具备集群高可用实战经验，集群架构原理与搜索技术深入，底层原理与分组聚合查询，Java API整合ElasticSearch以及Logstash、FileBeat使用等。深入理解MongoDB：基本原理，聚合操作及索引底层原理，集群模式及应用实战。深入理解Zookeeper：特性与节点数据类型，典型使用场景，选举Leader源码，集群ZAB协议与Watcher监听机制源码等。</span></li>-->
+                <!--                <li><span>深入理解Redis：I/O 多路复用，各版本之间的区别，简单字符串，链表，字典，跳跃表，整数集合，压缩列表，回收机制，线程模型，分布式寻址算法，过期策略，数据一致性，多级缓存架构，热点数据缓存，并发竞争，哨兵模式，主从复制，集群模式等。具有集群架构及高可用相关经验，熟悉各种缓存高并发的使用场景，如：热点缓存重构，缓存雪崩， 缓存穿透，缓存失效。</span></li>-->
+                <!--                <li><span>熟悉RabbitMQ，RockerMQ，Kafka消息中间件的使用，解决过各种消息通讯场景的疑难问题。如：延迟队列，消息可靠投递，消息队列的高可用，消息的幂等性，消息丢失，消息的顺序性，消息的延迟，消息过期失效，消息队列满了等问题。</span></li>-->
+                <!--                <li><span>在项目中解决过各种分布式场景的技术难题，比如分布式锁，分布式事务，分布式Session，分布式任务，ShardingSphere分库分表。深入理解各种高性能IO通信模型以及Netty底层数据交互源码，理解NIO与Netty线程模型有过深入研究，深入Hotspot源码与Linux内核，熟悉百万级并发服务器架构的设计。</span></li>-->
+                <!--                <li><span>具备0-1搭建微服务、高可用、高并发、分布式项目架构。具备环境搭建，自动化部署，产品需求讨论，任务分配，Code审查，负责指导、培训普通开发工程师，审核开发工程师的设计与研发质量等经验。具备项目管理、需求分析、文档编写、原型设计等基本的文档输出能力。</span></li>-->
+                <!--                <li><span>具备生产环境服务器变慢诊断，线上排查，性能评估，Linux常用命令，Docker容器化，Docker本地镜像仓库，GitLab私服，Jenkins自动化部署，k8s云原生，Skywalking分布式追踪系统，达梦国产化数据库，高性能图数据库Neo4j，spring security oauth2权限框架，swagger在线文档，gateway和Kong网关，i18n国际化等后端相关技术。</span></li>-->
+                <!--                <li><span>熟悉掌握K8S自动化运维平台Kubernetes以及Devops，kubectl核心，深入理解K8S Dashboard以及Pod原理及生命周期管理，K8S Replicaion controller，ReplicaSet，Deployment，ds，Job，Cronjob and Statefulset核心，K8S Service与负载均衡以及Ingress，K8S存储供应，使用NFS flex volume以及CSI接口，K8S Configmap，Secret，Metric server以及HPA，K8S部署Wordpress应用以及生产环境整体部署及全链路测试，k8s部署Shardingsphere，Mycat，Mysql主从与Redis，Rocketmq，Rabbitmq，Nacos以及PV/PVC/SC。</span></li>            -->
             </ul>
         </section>
         <!-- 自我评价 -->
