--- a/index.html
+++ b/index.html
@@ -217,9 +217,26 @@
                     有过<a href="https://liaozhiwei.blog.csdn.net/article/details/125010353"><span>JVM线上调优经验</span></a>。
                     </span>
                 </li>
-                <li><span>深入理解MySQL：索引数据结构、最左前缀原则、聚集索引、辅助索引、覆盖索引、联合索引、FIC、离散读、ICP优化、全文检索、行级锁及其算法、意向锁、死锁、乐观锁、悲观锁、一致性非锁定读（MVCC原理）、主键自增长实现原理、事务隔离级别、重做日志刷盘策略、分布式事务、SQL的执行流程、主从复制、存储引擎、分库分表、读写分离、四大属性的底层实现原理、BufferPool缓存机制、有MySQL调优经验。</span></li>
+                <li><span>深入理解MySQL：
+                    <a href="https://blog.csdn.net/java_wxid/article/details/125041094"><span>索引数据结构</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/125103890"><span>SQL优化、索引失效的几种情况、FIC、OnlineDDL</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/125104469"><span>聚集索引、辅助索引、覆盖索引、联合索引、filesort过程</span></a>、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/125104797"><span>离散读、ICP优化、全文检索</span></a>、
+                    、行级锁及其算法、意向锁、死锁、乐观锁、悲观锁、一致性非锁定读（MVCC原理）、
+                    <a href="https://blog.csdn.net/java_wxid/article/details/125104797"><span>主键自增长实现原理</span></a>、
+                    事务隔离级别、重做日志刷盘策略、分布式事务、SQL的执行流程、主从复制、存储引擎、分库分表、读写分离、四大属性的底层实现原理、BufferPool缓存机制、有MySQL调优经验。</span></li>
                 <li><span>深入理解Redis：多路复用、简单字符串、链表、字典、跳跃表、整数集合、压缩列表、回收机制、线程模型、分布式寻址算法、过期策略、内存淘汰策略、各版本之间的区别、数据一致性、多级缓存架构、热点数据缓存、并发竞争、哨兵模式、主从复制、集群模式等。具有集群架构及高可用相关经验、熟悉各种缓存高并发的使用场景如：热点缓存重构、缓存雪崩、 缓存穿透、缓存失效。</span></li>
-                <li><span>熟悉掌握RabbitMQ、RockerMQ、Kafka消息中间件、解决过各种消息通讯场景的疑难问题。对于以上三种消息中间件出现的消息可靠投递、消息丢失、消息顺序性、消息延迟、过期失效、消息队列满了、消息高可用等问题都有着不错的实战解决方案。</span></li>
+
+                <li><span>熟悉掌握
+                    <a href="https://liaozhiwei.blog.csdn.net/article/details/121462512"><span>RabbitMQ</span></a>、
+                    <a href="https://www.yuque.com/docs/share/5e1e4e3a-073e-4cd3-b2cd-5160663152e7"><span>RockerMQ</span></a>、
+                    <a href="https://www.yuque.com/docs/share/a6a007cf-9cbc-4163-b3f7-83cda2c3a4a7"><span>Kafka</span></a>
+                    消息中间件、解决过各种消息通讯场景的疑难问题。对于以上三种消息中间件出现的
+                    <a href="https://www.yuque.com/docs/share/a6a007cf-9cbc-4163-b3f7-83cda2c3a4a7"><span>消息可靠投递、消息丢失、消息顺序性、消息延迟、过期失效、消息队列满了、消息高可用</span></a>
+                    等问题都有着不错的实战解决方案。
+                    </span>
+                </li>
+
                 <li><span>深入理解Spring、Spring MVC、Mybatis、Spring Boot、Spring Could、Dubbo等开源框架的设计原理以及底层架构、研究过Spring循环依赖源码、Spring启动过程源码、Spring事务源码、Bean生命周期源码、Ioc容器加载过程源码、 AOP源码、SpringMVC执行流程源码、MyBatis的数据过操作过程源码、SQL操作执行流程源码、配置文件解析源码、 Spring Boot自动装配核心源码、Alibaba Nacos注册中心源码、Sentinel规则持久化源码、分布式事务组件Seata内核源码、Dubbo服务引入与导出以及调用源码。深入理解Zookeeper：特性与节点数据类型、典型使用场景、选举Leader源码、集群ZAB协议与Watcher监听机制源码等。</span></li>
                 <li><span>深入理解ElasticSearch：核心语法、倒排索引、底层原理与分组聚合查询、具备集群高可用实战经验、集群架构原理与搜索技术深入、Java API整合ElasticSearch以及Logstash、FileBeat使用等。深入理解MongoDB：基本原理、聚合操作及索引底层原理、集群模式及应用实战。深入理解各种高性能IO通信模型以及Netty底层数据交互源码、理解NIO与Netty线程模型有过深入研究、深入Hotspot源码与Linux内核、熟悉百万级并发服务器架构的设计。</span></li>
                 <li><span>具备0-1搭建微服务、高可用、高并发、分布式项目架构、环境搭建、自动化部署、服务器环境线上排查、性能评估相关经验。具备Linux常用命令、Docker容器化、本地镜像仓库、GitLab私服、Jenkins自动化部署等技术。</span></li>
@@ -254,10 +271,10 @@
             <h2>
                 <i class="fa fa-pencil" aria-hidden="true"></i>已达成的目标</h2>
             <hr/>
-            <p>创建个人社区（已达成）</p>
-            <p>CSDN付费专栏（已达成）</p>
-            <p>CSDN博客专家（已达成）</p>
-            <p>CSDN涨粉一万（已达成）</p>
+            <p>个人社区（已达成）</p>
+            <p>付费专栏（已达成）</p>
+            <p>多平台博客专家（已达成）</p>
+            <p>涨粉一万（已达成）</p>
             <p>搭建新媒体平台（已达成）</p>
             <p>资深开发工程师（已达成）</p>
             <p>Java领域优质创作者（已达成）</p>
